--- a/src/main/resources/toremove/exuser-edit.html
+++ b/src/main/resources/toremove/exuser-edit.html
@@ -1,7 +1,13 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Редактирование пользователя</title>
-</head>
 <body>
 <form class="your-form-selector" method="post" action="/admin/update">
     <table width="100%" cellspacing="0" cellpadding="4">
@@ -37,7 +43,6 @@
                 <td><input type="submit" value="Подтвердить изменения"></td>
             </tr>
             </tr>
-        </c:forEach>
     </table>
 </form>
 <div th:include="user-logout"></div>
