--- a/src/main/resources/toremove/exuser-main.html
+++ b/src/main/resources/toremove/exuser-main.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Список пользователей</title>
+    <link rel="stylesheet" href="../static/bootstrap.css">
 </head>
 <body>
 <form class="your-form-selector" method="post" action="/admin/add">
@@ -30,7 +31,6 @@
     </table>
 </form>
 <table border="" width="600" cellspacing="1" cellpadding="4">
-    <caption>Списо пользователей:</caption>
     <tr>
         <td align="center">ID</td>
         <td align="center">Имя</td>
